@@ -39,9 +39,9 @@ import com.google.devtools.build.lib.rules.cpp.CcToolchainVariables.VariableValu
 import com.google.devtools.build.lib.skyframe.serialization.testutils.RoundTripping;
 import com.google.devtools.build.lib.skyframe.serialization.testutils.SerializationTester;
 import com.google.devtools.build.lib.testutil.TestConstants;
+import com.google.devtools.build.lib.vfs.PathFragment;
 import com.google.errorprone.annotations.CanIgnoreReturnValue;
 import java.util.List;
-import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
 import javax.annotation.Nullable;
 import org.junit.Test;
@@ -367,8 +367,16 @@ public final class CcToolchainFeaturesTest extends BuildViewTestCase {
             CppActionNames.CPP_COMPILE, createVariables(), PathMapper.NOOP);
     assertThat(env)
         .containsExactly(
-            "foo", "bar", "cat", "meow", "dog", "woof",
-            "withFeature", "value1", "withoutNotFeature", "value4")
+            "foo",
+            "bar",
+            "cat",
+            "meow",
+            "dog",
+            "woof",
+            "withFeature",
+            "value1",
+            "withoutNotFeature",
+            "value4")
         .inOrder();
     assertThat(env).doesNotContainEntry("withoutFeature", "value2");
     assertThat(env).doesNotContainEntry("withNotFeature", "value3");
@@ -462,11 +470,21 @@ public final class CcToolchainFeaturesTest extends BuildViewTestCase {
   }
 
   private String getExpansionOfFlag(String value, CcToolchainVariables variables) throws Exception {
-    return getCommandLineForFlag(value, variables).get(0);
+    return getExpansionOfFlag(value, variables, PathMapper.NOOP);
+  }
+
+  private String getExpansionOfFlag(
+      String value, CcToolchainVariables variables, PathMapper pathMapper) throws Exception {
+    return getCommandLineForFlag(value, variables, pathMapper).getFirst();
   }
 
   private List<String> getCommandLineForFlagGroups(String groups, CcToolchainVariables variables)
       throws Exception {
+    return getCommandLineForFlagGroups(groups, variables, PathMapper.NOOP);
+  }
+
+  private List<String> getCommandLineForFlagGroups(
+      String groups, CcToolchainVariables variables, PathMapper pathMapper) throws Exception {
     FeatureConfiguration configuration =
         buildFeatures(
                 "features = [",
@@ -481,12 +499,14 @@ public final class CcToolchainFeaturesTest extends BuildViewTestCase {
                 "    ],",
                 ")]")
             .getFeatureConfiguration(ImmutableSet.of("a"));
-    return configuration.getCommandLine(CppActionNames.CPP_COMPILE, variables);
+    return configuration.getCommandLine(
+        CppActionNames.CPP_COMPILE, variables, /* inputMetadataProvider= */ null, pathMapper);
   }
 
-  private List<String> getCommandLineForFlag(String value, CcToolchainVariables variables)
-      throws Exception {
-    return getCommandLineForFlagGroups("flag_group(flags = ['" + value + "'])", variables);
+  private List<String> getCommandLineForFlag(
+      String value, CcToolchainVariables variables, PathMapper pathMapper) throws Exception {
+    return getCommandLineForFlagGroups(
+        "flag_group(flags = ['" + value + "'])", variables, pathMapper);
   }
 
   private String getFlagParsingError(String value) {
@@ -529,6 +549,31 @@ public final class CcToolchainFeaturesTest extends BuildViewTestCase {
         .contains("Invalid toolchain configuration: Cannot find variable named 'v'");
   }
 
+  @Test
+  public void testPathExpansion() throws Exception {
+    PathMapper pathMapper =
+        (PathFragment path) ->
+            path.startsWith(PathFragment.create("bazel-out"))
+                ? path.subFragment(0, 1).getRelative("cfg").getRelative(path.subFragment(2))
+                : path;
+    assertThat(getExpansionOfFlag("%{path:my/source.c}", CcToolchainVariables.empty(), pathMapper))
+        .isEqualTo("my/source.c");
+    assertThat(
+            getExpansionOfFlag(
+                "%{path:bazel-out/foobar/bin/my/artifact.a}",
+                CcToolchainVariables.empty(), pathMapper))
+        .isEqualTo("bazel-out/cfg/bin/my/artifact.a");
+
+    reporter.removeHandler(failFastHandler);
+    assertThrows(Throwable.class, () -> getExpansionOfFlag("%{path:/absolute/path}"));
+    assertContainsEvent(
+        "Invalid toolchain configuration: expected relative Unix-style path after 'path:' at position 2 while parsing a flag containing '%{path:/absolute/path}");
+
+    assertThrows(Throwable.class, () -> getExpansionOfFlag("%{path:}"));
+    assertContainsEvent(
+        "Invalid toolchain configuration: expected path after 'path:' at position 2 while parsing a flag containing '%{path:}");
+  }
+
   private static CcToolchainVariables createStructureSequenceVariables(
       String name, VariableValue... values) {
     return CcToolchainVariables.builder().addVariable(name, ImmutableList.copyOf(values)).build();
@@ -539,14 +584,9 @@ public final class CcToolchainFeaturesTest extends BuildViewTestCase {
    * overhead is prohibitively big.
    */
   @Immutable
-  private static final class StructureValue extends VariableValueAdapter {
+  private record StructureValue(ImmutableMap<String, VariableValue> value)
+      implements VariableValueAdapter {
     private static final String STRUCTURE_VARIABLE_TYPE_NAME = "structure";
-
-    private final ImmutableMap<String, VariableValue> value;
-
-    private StructureValue(ImmutableMap<String, VariableValue> value) {
-      this.value = value;
-    }
 
     @Nullable
     @Override
@@ -567,22 +607,6 @@ public final class CcToolchainFeaturesTest extends BuildViewTestCase {
     @Override
     public boolean isTruthy() {
       return !value.isEmpty();
-    }
-
-    @Override
-    public boolean equals(Object other) {
-      if (!(other instanceof StructureValue)) {
-        return false;
-      }
-      if (this == other) {
-        return true;
-      }
-      return Objects.equals(value, ((StructureValue) other).value);
-    }
-
-    @Override
-    public int hashCode() {
-      return value.hashCode();
     }
   }
 
